<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:text="@string/texto_button_login"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_button_guardar"/>

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_button_buscar"/>


</LinearLayout>